<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main3Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorFondoNoctur"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_numTelefonico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingTop="25dp"
            android:paddingLeft="15dp"
            android:gravity="left"
            android:text="@string/tv_numTelefono"
            android:textColor="#FFFFFF"
            android:textSize="35sp"
            android:textStyle="bold"
            android:typeface="serif"/>

        <EditText
            android:id="@+id/txt_numTelefonico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="13"
            android:hint="@string/numTelefono"
            android:inputType="phone"
            android:textSize="30dp"
            android:padding="22dp"
            />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:text="@string/guardar"
            android:textSize="30sp"
            android:onClick="Guardar"
            android:background="@drawable/margen"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>